build: update version to 5.0.0-rc.10, deprecate `LogGroupList`, and replace deprecated method usage with nullity annotations
Removed `LogGroupList` class, applied nullity annotations throughout key Aliyun SLS components for improved type-safety, and cleaned up deprecated methods.

Signed-off-by: sinri <e.joshua.s.e@gmail.com>